compiler/lume_hir/src/snapshots/lume_hir__lower__tests__trait_snapshots@generic.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower(\"trait Add<T> { }\").unwrap()"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        1119898709443545213: Type(
            Trait(
                TraitDefinition {
                    id: 1119898709443545213,
                    type_id: None,
                    name: Add,
                    type_parameters: [
                        TypeParameter {
                            name: Identifier {
                                name: "T",
                                location: <internal>:10:11,
                            },
                            type_id: None,
                            type_param_id: None,
                            constraints: [],
                            location: <internal>:10:11,
                        },
                    ],
                    methods: [],
                    location: <internal>:0:16,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
