compiler/lume_hir/src/snapshots/lume_hir__lower__tests__trait_snapshots@private_method.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower(\"trait Add { fn add(other: int) -> int }\").unwrap()"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        1119898709443545213: Type(
            Trait(
                TraitDefinition {
                    id: 1119898709443545213,
                    type_id: None,
                    name: Add,
                    type_parameters: [],
                    methods: [
                        TraitMethodDefinition {
                            method_id: None,
                            visibility: Private,
                            name: Identifier {
                                name: "add",
                                location: <internal>:15:18,
                            },
                            parameters: [
                                Parameter {
                                    id: 0,
                                    name: Identifier {
                                        name: "other",
                                        location: <internal>:19:24,
                                    },
                                    param_type: Type {
                                        name: int,
                                        type_params: [],
                                        location: <internal>:26:29,
                                    },
                                    location: <internal>:19:29,
                                },
                            ],
                            type_parameters: [],
                            return_type: Some(
                                Type {
                                    name: int,
                                    type_params: [],
                                    location: <internal>:34:37,
                                },
                            ),
                            block: None,
                            location: <internal>:12:37,
                        },
                    ],
                    location: <internal>:0:39,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
