compiler/lume_hir/src/snapshots/lume_hir__lower__tests__type_alias_snapshots@scalar.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower(\"type A = B\")"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        10060190011017930945: Type(
            Alias(
                AliasDefinition {
                    id: 10060190011017930945,
                    type_id: None,
                    name: 'A',
                    definition: Type {
                        name: 'B',
                        type_params: [],
                        location: <internal>:9:10,
                    },
                    location: <internal>:0:10,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
