compiler/lume_hir/src/snapshots/lume_hir__lower__tests__type_aliasing@scalar_to_generic.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower(\"type A = B<C>\")"
---
Ok(
    Map {
        module: mod(0),
        files: SourceMap {
            mapping: {
                ModuleFileId(
                    mod(0),
                    0,
                ): NamedSource {
                    name: "",
                    content: "",
                },
            },
        },
        items: {
            10060190011017930945: Type(
                Alias(
                    AliasDefinition {
                        id: 10060190011017930945,
                        type_id: None,
                        name: 'A',
                        definition: Scalar(
                            ScalarType {
                                name: 'B',
                                type_params: [
                                    Scalar(
                                        ScalarType {
                                            name: 'C',
                                            type_params: [],
                                            location: ModuleFileId(mod(0), 0):11:12,
                                        },
                                    ),
                                ],
                                location: ModuleFileId(mod(0), 0):10:13,
                            },
                        ),
                        location: ModuleFileId(mod(0), 0):0:13,
                    },
                ),
            ),
        },
        statements: {},
        expressions: {},
    },
)
